<resources>
    <string name="app_name">MCQ Based Quiz App</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="john">John</string>
    <string name="submit">Submit</string>
    <string name="start">Start</string>
    <string name="previous">Previous</string>
    <string name="_0">0</string>
    <string name="seprator">/</string>
    <string name="_10">10</string>
    <string name="next">Next</string>
    <string name="option_4">option 4</string>
    <string name="option_3">option 3</string>
    <string name="option_2">option 2</string>
    <string name="option_1">option 1</string>
    <string name="finish">Finish</string>
    <string name="nextt">Next</string>
    <string name="kindly_enter_your_name">Kindly Enter Your Name</string>
    <string name="user_input">user_input</string>
    <string name="hey_i_just_played_the_mcq_based_quiz_app_made_by_abbas_here_s_my_score">"Hey! i just played the MCQ Based Quiz App made by Abbas. Here's my score: "</string>
    <string name="score">score</string>
    <string name="name">name</string>
    <string name="john_doe">John Doe</string>
    <string name="share_your_score">Share Your Score</string>
</resources>