<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    tools:context=".QuizActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_launcher2_foreground"
            android:id="@+id/prev_pic"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:layout_toEndOf="@id/prev_pic"
            android:layout_marginTop="15dp"
            android:id="@+id/prev_id2"


            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:id="@+id/qindex"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seprator"
                android:id="@+id/score_seprator"
                android:layout_toRightOf="@id/qindex"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                android:id="@+id/total_score"
                android:layout_toRightOf="@id/score_seprator"
                />

        </RelativeLayout>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_marginVertical="40dp"
        android:background="@android:color/transparent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/enter_your_name_here"
            android:background="@android:color/transparent"
            android:id="@+id/tvquestion"

            />

    </androidx.cardview.widget.CardView>


    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:id="@+id/rgid"
        >


        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_1"
            android:id="@+id/option1">
<!--            android:background="@drawable/radio_button_background"-->
        </RadioButton>



        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_2"
            android:id="@+id/option2">
        </RadioButton>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_3"
                android:id="@+id/option3">
            </RadioButton>



        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_4"
            android:id="@+id/option4">
        </RadioButton>


    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="70dp"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dgreen"
            android:text="@string/next"
            android:id="@+id/changer"
            />

    </LinearLayout>












</LinearLayout>

