<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    tools:context=".NameActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="80dp"
            app:cardElevation="4dp"
            android:layout_centerInParent="true"
            >


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo_img"
                android:id="@+id/logo_img_id"
                />

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_margin="20dp"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_name_here"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@android:color/transparent"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="@string/john"
                android:id="@+id/userdata"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:inputType="text"


                />


        </androidx.cardview.widget.CardView>



    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:layout_width="match_parent"
                android:layout_marginHorizontal="50dp"
                android:padding="20dp"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:layout_gravity="center"
                android:backgroundTint="@color/yellow"
                android:textColor="@color/black"
                android:id="@+id/btnactivitystart"



                />
        </LinearLayout>



    </LinearLayout>









